--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,32 +1,12 @@
-﻿<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>7bits-frontend-2016</title>
-	<link rel="stylesheet" type="text/css" href="../styles/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700" rel="stylesheet">
-  </head>
-  
-  <body>
-		<header class="header">
-			<div class="header__logo">
-				<a href ="index.html"><img src="../images/PaloAlto.png" alt="Palo Alto"></a>
-			</div>
-			<nav class="nav">
-				<a class="nav__ref_color-gray">home</a>
-				<a class="nav__ref" href="index.html">about</a>
-				<a class="nav__ref "href="index.html">archive</a>
-				<a class="nav__ref "href="contacts.html">contact</a>
-				<a class="nav__ref-src" href="index.html"></a>
-			</nav>
-		</header>
+﻿{% extends "layout.html" %}
 
+{% block main %}
 		<main>
 			<section class="block-content">
 				<article class="block-content__internal">
 					<a href="#" target="_blank"><button class="button" type="button">i do travel </button></a>
 					<div class="date-text">Sep 20</div>
-					<div class="title-text">No difference how many peaks you reach if there was no pleasure in the climb.</div>
+					<h2 class="title-text">No difference how many peaks you reach if there was no pleasure in the climb.</h2>
 					<hr class="block-content__line"></hr>
 					<div class="main-text">Quisque congue lacus mattis massa luctus, nec hendrerit purus aliquet. Ut ac elementum urna. Pellentesque suscipit metus et egestas congue. Duis eu pellentesque turpis, ut maximus metus. Sed ultrices tellus vitae rutrum congue. Fusce luctus augue id nisl suscipit, vel sollicitudin orci egestas. Morbi posuere venenatis ipsum, ac vestibulum quam dignissim efficitur. Ut vitae rutrum augue, in volutpat quam. Cras a viverra ipsum. Aenean ut consequat ex, vitae vulputate nunc. Vestibulum metus nisi, aliquam sed tincidunt sit amet, pretium et augue.</div>
 					<div class="block-content__pressbutton"><a class="decoration-none" href="#" target="_blank">read more</a></div>
@@ -42,7 +22,7 @@
 				<article class="block-content__internal">
 					<a href="#" target="_blank"><button class="button" type="button">i do observe</button></a>
 					<div class="date-text">Sep 18</div>
-					<div class="title-text">You know, I'd rather argue with you, then laugh with anyone else.</div>
+					<h2 class="title-text">You know, I'd rather argue with you, then laugh with anyone else.</h2>
 					<hr class="block-content__line"></hr>
 					<div class="subtitle-text">Curabitur luctus placerat lorem id eleifend. Nulla ac lacus finibus, tempor velit hendrerit, vulputate lacus. Nunc fermentum nunc sem, ac eleifend tellus cursus nec. Donec a euismod est, vitae accumsan purus. Proin aliquet ex massa, ac finibus magna commodo vitae.</div>
 					<div class="main-text">Quisque congue lacus mattis massa luctus, nec hendrerit purus aliquet. Ut ac elementum urna. Pellentesque suscipit metus et egestas congue. Duis eu pellentesque turpis, ut maximus metus. Sed ultrices tellus vitae rutrum congue. Fusce luctus augue id nisl suscipit, vel sollicitudin orci egestas. Morbi posuere venenatis ipsum, ac vestibulum quam dignissim efficitur. Ut vitae rutrum augue, in volutpat quam. Cras a viverra ipsum. Aenean ut consequat ex, vitae vulputate nunc. Vestibulum metus nisi, aliquam sed tincidunt sit amet, pretium et augue.<div class="P"></div>Sed sagittis commodo dolor. Vivamus elementum sem sed sapien bibendum viverra. Curabitur semper scelerisque turpis eu ullamcorper. Morbi tincidunt auctor orci id consequat. Nulla odio mi, iaculis id congue quis, euismod id nisi. In varius congue diam, et viverra lorem bibendum ut.</div>
@@ -58,7 +38,7 @@
 				<article class="block-content__internal">
 					<a href="#" target="_blank"><button class="button" type="button">i do reflect</button></a>
 					<div class="date-text">Sep 11</div>
-					<div class="title-text">Democracy means simply the bludgeoning of the people by the people for the people.</div>
+					<h2 class="title-text">Democracy means simply the bludgeoning of the people by the people for the people.</h2>
 					<hr class="block-content__line"></hr>
 					<div class="block-content__image"><img src="../images/img.jpg" alt="Статуя"></div>
 					<div class="main-text">Quisque congue lacus mattis massa luctus, nec hendrerit purus aliquet. Ut ac elementum urna. Pellentesque suscipit metus et egestas congue. Duis eu pellentesque turpis, ut maximus metus. Sed ultrices tellus vitae rutrum congue. Fusce luctus augue id nisl suscipit, vel sollicitudin orci egestas. Morbi posuere venenatis ipsum, ac vestibulum quam dignissim efficitur. Ut vitae rutrum augue, in volutpat quam. Cras a viverra ipsum. Aenean ut consequat ex, vitae vulputate nunc. Vestibulum metus nisi, aliquam sed tincidunt sit amet, pretium et augue.</div>
@@ -74,31 +54,5 @@
 				</article>
 			</section>
 		</main>
+{% endblock %}
 		
-		<footer class="footer">
-			<div class="footer__internal">
-				<div class="footer__logo"><a href ="index.html"><img src="../images/PaloAlto.png" alt="Palo Alto"></a></div>
-				<div class="footer__nav">
-					<a class="nav__ref_color-gray">home</a>
-					<a class="nav__ref_style" href="index.html">about</a>
-					<a class="nav__ref_style "href="index.html">archive</a>
-					<a class="nav__ref_style "href="contacts.html">contact</a>
-					<div class="footer__background"><a class="nav__ref-src_color-white" href="index.html"></a></div>
-				</div>
-				<hr class="footer__line"></hr>
-				<div class="footer__text">Nunc placerat dolor at lectus hendrerit dignissim. Ut tortor sem, consectetur nec hendrerit ut, ullamcorper ac odio. Donec viverra ligula at quam tincidunt imperdiet. Nulla mattis tincidunt auctor.</div>
-				<hr class="footer__line_small"></hr>
-				<div class="footer__text_size-14">© 2015 - Palo Alto. All Rights Reserved. Designed & Developed by
-				<a class="footer__text-lato-bold" href="#" target="_blank">PixelBuddha Team</a></div> 
-				<div class="share-icons">
-					<a class="icons__background" href="#" target="_blank"><div class="share-icons__img_facebook"></div></a>
-					<a class="icons__background" href="#" target="_blank"><div class="share-icons__img_twitter"></div></a>
-					<a class="icons__background" href="#" target="_blank"><div class="share-icons__img_instagram "></div></a>
-					<a class="icons__background" href="#" target="_blank"><div class="share-icons__img_pinterest"></div></a>
-				</div>
-			</div>
-		</footer> 
-
-  </body>
-
-</html>
