Adaptive Web Design

--- a/src/templates/contacts.html
+++ b/src/templates/contacts.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
-
-{% block main %}
+{% set activeTab = 4 %}
+		{% block main %}
 		<main>
 			<section class="block-content">
 				<article class="block-content__internal">
