--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -9,21 +9,21 @@
     padding-left: 30px;
     border: 0;
     background-color: #f7f9fc;
-    font-family: 'Lato', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 20px;
     font-weight: 400;
     margin-top: 10px;
     color: #bcbdbf;
 }
 .form-contact__email {
-    font-family: 'Lato', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 20px;
     font-weight: 400;
     float: right;
     width: 330px;
 }
 .form-contact__name {
-    font-family: 'Lato', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 20px;
     font-weight: 400;
     width: 330px;
@@ -31,7 +31,7 @@
 }
 .form-contact__message,
 .form-contact__subject {
-    font-family: 'Lato', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 20px;
     font-weight: 400;
     width: 730px;
@@ -51,4 +51,32 @@
 }
 .block-content__pressbutton_size-24 {
     font-size: 24px;
+}
+
+@media screen and (max-width: 1024px) {
+    .form-contact__name,
+    .form-contact__email {
+        display: block;
+        float: left;
+        width: 100%;
+        margin-top: 30px;
+    }
+    .form-contact__message,
+    .form-contact__subject {
+        width: 100%;
+    }
+}
+@media screen and (max-width: 768px) {
+    
+}
+@media screen and (max-width: 480px) {
+    .form-contact__message,
+    .form-contact__subject, 
+    .form-contact__name,
+    .form-contact__email {
+        width: 90%;
+    }
+}
+@media screen and (max-width: 320px) {
+    
 }
