--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -62,6 +62,7 @@
 .block-content__images:hover:after {
     opacity: 0.3;
 }
+.button_480px,
 .button {
     float: right;
     margin-top: 20px;
@@ -78,10 +79,12 @@
     cursor: pointer;
     transition: padding 150ms linear;
 }
+.button_480px:hover,
 .button:hover {
     background: #6B78C5;
     padding: 12px 16px;
 }
+.button_480px,
 .button:active {
     background: #525FAB;
 }
@@ -99,10 +102,68 @@
 .block-content__quote {
     border-left: 4px solid #eeeeee;
     padding-left: 22px;
-    font-family: 'Lato', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 20px;
     margin-top: 25px;
     margin-bottom: 25px;
     line-height: 1.5;
     color: #999999;
+}
+/*---------------->MEDIA-INDEX<----------------*/
+@media screen and (max-width: 1024px) {
+    .block-content {
+        width: 90%;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+   
+}
+@media screen and (max-width: 768px) {
+    .block-content__hashtag {
+        display: block;
+        margin-top: 20px;
+        float: none;
+    }
+    .block-content__images {
+        height: 378px;
+    }
+    .block-content__images:after {
+        height: 378px;
+    }
+}
+@media screen and (max-width: 480px) {
+    .block-content {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+    .block-content__images {
+        height: 278px;
+        padding-bottom: 0;
+    }
+    .block-content__images:after {
+        height: 278px;
+    }
+    .block-content__image {
+        float: none;
+        padding-left: 0;
+         text-align: center;
+    }
+    .block-content__hashtag {
+        margin-top: 0;
+    }
+    .button_480px,
+    .button {
+        margin-top: 0px;
+        margin-right: -52px;
+    }
+    .button_480px {
+        position: relative;
+        bottom: 278px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .button_480px,
+    .button {
+        margin-right: -24px;
+    }
 }
