--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,10 +1,10 @@
 body{
-    background:#f7f9fc; color:#869496;
+    padding:0px; margin:0px; background:#f7f9fc; color:#869496;
 }
 /*---------------->FONTS<----------------*/
 .block-content__hashtag,
 .main-text {
-    font-family: 'Lato', serif;
+    font-family: 'Lato', sans-serif;
     font-weight: 400;
     font-size: 17px;
     color: rgb(51, 51, 51);
@@ -17,13 +17,13 @@ body{
 .block-content__pressbutton,
 .date-text,
 .title-text {
-    font-family: 'Lato', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 40px;
     font-weight: 700;
     color: rgb(0, 0, 0);
 }
 .subtitle-text {
-    font-family: 'Lato', serif;
+    font-family: 'Lato', sans-serif;
     font-style: italic;
     font-weight: 400;
     font-size: 25px;
@@ -44,7 +44,7 @@ body{
 /*---------------->HEADER<----------------*/
 .header {
     width: 956px;
-  height: 191px;
+    height: 191px;
     background: transparent;
     margin: 0 auto;
 }
@@ -59,6 +59,7 @@ body{
     font-weight: 700;
     color: #333333;
 }
+.nav__ref_color-gray_inline,
 .nav__ref_color-gray {
     color: #bdbdbd;
     text-decoration: none;
@@ -165,7 +166,7 @@ body{
 }
 .footer__text_size-14,
 .footer__text {
-    font-family: 'Lato', serif;
+    font-family: 'Lato', sans-serif;
     font-weight: 400;
     font-size: 13px;
     color: #99a2d7;
@@ -262,4 +263,144 @@ body{
     top: -18px;
     left: -34px;
     border-color: #5c6bc0;
+}
+/*---------------->MEDIA-INDEX<----------------*/
+@media only screen and (min-resolution: 2dppx) {
+    .share-icons__img_pinterest,
+    .share-icons__img_instagram,
+    .share-icons__img_twitter,
+    .share-icons__img_facebook {
+        background-image: url(../images/social@2x.png);
+    }
+}
+@media screen and (max-width: 1024px) {
+    .header {
+        width: 90%;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    .footer {
+        width: auto;
+    }
+    .footer__internal {
+        width: auto; 
+    }
+}
+@media screen and (max-width: 768px) {
+    .footer__internal {
+        height: auto;
+    }
+    .footer__line {
+        width: 90%;
+    }
+    .footer__line_small {
+        width: 80%;
+    }
+    .header__logo {
+        display: block;
+        float: none; 
+        height: 50%; 
+        margin-top: 50px;
+    } 
+    .header__logo::before {
+        display: none;
+    }
+    .nav {
+        display: block;
+        float: left;
+        height: 0; 
+    }
+    .nav::before {
+        display: none;
+    }
+}
+@media screen and (max-width: 480px) {
+    .block-content__internal {
+        padding-left: 52px;
+        padding-right: 52px;
+        padding-bottom: 60px;
+    }
+    .footer__nav {
+        float: right;
+    }
+    .block-content {
+        margin-left: 25px;
+    }
+    .header__logo {
+        height: 20%; 
+        float: right;
+    }
+    .nav__ref {
+        margin-top: 15px;
+        display: block;
+    }
+    .nav__ref-src {
+        display: block;
+        margin-top: 15px;
+    }
+    .nav__ref-src_color-white {
+        display: none;
+    }
+    .title-text {
+        font-size: 32px;
+    }
+    .subtitle-text {
+        font-size: 21px;
+    }
+    .footer__text_size-14,
+    .footer__text {
+        padding-left: 60px;
+        padding-right: 60px;
+    }
+    .date-text {
+        padding-top: 40px;
+    }
+    .footer__internal {
+        margin-top: 60px;
+    }
+}
+@media screen and (max-width: 360px) {
+    .nav__ref_color-gray {
+        display: block;
+        margin-top: 15px;
+    }
+    .footer__nav {
+        float: none;
+    }
+    .nav__ref_color-gray_inline,
+    .nav__ref_style {
+        display: block;
+        margin-top: 24px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .block-content {
+        margin-bottom: 20px;
+    }
+    .block-content__internal {
+        padding-left: 24px;
+        padding-right: 24px;
+        padding-bottom: 50px;
+    }
+    .main-text {
+        font-size: 16px;
+    }
+    .block-content {
+        margin-left: 15px;
+    }
+    .title-text {
+        font-size: 24px;
+    }
+    .date-text {
+        font-size: 15px;
+    }
+    .block-content__quote,
+    .subtitle-text {
+        font-size: 17px;
+    }
+    .footer__text_size-14,
+    .footer__text {
+        padding-left: 32px;
+        padding-right: 32px;
+    }
 }
