--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -4,23 +4,24 @@
     <meta charset="utf-8" />
     <meta name="keywords" content="Palo, Alto, Travel, Palo-Alto">
     <meta name="description" content="Palo Alto">
-    <title>Palo Alto</title>
-    <link rel="shortcut icon" href="../images/favicon.ico" sizes="32x32"/>
-    <link rel="shortcut icon" href="../images/favicon.ico" sizes="16x16"/>
-    <link rel="stylesheet" href="../vendor/normalize.css"/>
-    <link rel="stylesheet" type="text/css" href="../styles/style.css">
+    {% if activeTab == 1 %} <title>Palo Alto</title> {% endif %} 
+    {% if activeTab == 4 %} <title>Contacts</title> {% endif %} 
+    <link rel="shortcut icon" href="./images/favicon.ico" sizes="32x32"/>
+    <link rel="shortcut icon" href="./images/favicon.ico" sizes="16x16"/>
+    <link rel="stylesheet" href="./vendor/vendor.css"/>
+    <link rel="stylesheet" type="text/css" href="./styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700i,700" rel="stylesheet">
   </head> 
   <body>
         <header class="header">
             <div class="header__logo">
-                <a href ="index.html"><img src="../images/PaloAlto.png" alt="Palo Alto"></a>
+                <a href ="index.html"><img src="./images/PaloAlto.png" alt="Palo Alto"></a>
             </div>
             <nav class="nav">
-                <a class="nav__ref" href="index.html">home</a>
-                <a class="nav__ref" href="index.html">about</a>
-                <a class="nav__ref" href="index.html">archive</a>
-                <a class="nav__ref" href="contacts.html">contact</a>
+                <a {% if activeTab == 1 %} class="nav__ref_color-gray" {% else %} class="nav__ref" href="index.html"{% endif %}>home</a>
+                <a {% if activeTab == 2 %} {% else %} class="nav__ref" {% endif %} href="index.html">about</a>
+                <a {% if activeTab == 3 %} {% else %} class="nav__ref" {% endif %}  href="index.html">archive</a>
+                <a {% if activeTab == 4 %} class="nav__ref_color-gray" {% else %} class="nav__ref" href="contacts.html"{% endif %}>contact</a>
                 <a class="nav__ref-src" href="index.html"></a>
             </nav>
         </header>
@@ -30,12 +31,12 @@
 
         <footer class="footer">
             <div class="footer__internal">
-                <div class="footer__logo"><a href ="index.html"><img src="../images/PaloAlto.png" alt="Palo Alto"></a></div>
+                <div class="footer__logo"><a href ="index.html"><img src="./images/PaloAlto.png" alt="Palo Alto"></a></div>
                 <div class="footer__nav">
-                    <a class=" nav__ref_color-gray">home</a>
-                    <a class="nav__ref_style" href="index.html">about</a>
-                    <a class="nav__ref_style" href="index.html">archive</a>
-                    <a class="nav__ref_style" href="contacts.html">contact</a>
+                    <a {% if activeTab == 1 %} class=" nav__ref_color-gray" {% else %} class="nav__ref_style" href="index.html" {% endif %}> home</a>
+                    <a {% if activeTab == 2 %} class=" nav__ref_color-gray" {% else %} class="nav__ref_style" {% endif %} href="index.html"> about</a>
+                    <a {% if activeTab == 3 %} class=" nav__ref_color-gray" {% else %} class="nav__ref_style" {% endif %} href="index.html"> archive</a>
+                    <a {% if activeTab == 4 %} class=" nav__ref_color-gray" {% else %} class="nav__ref_style" href="contacts.html" {% endif %}>contact</a>
                     <div class="footer__background"><a class="nav__ref-src_color-white" href="index.html"></a></div>
                 </div>
                 <hr class="footer__line">
