--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -24,6 +24,7 @@
     <script src="./vendor/js/inputmask.numeric.extensions.js" type="text/javascript"></script>
     <script src="./vendor/js/datepicker.js"></script>
     <script src="./scripts/scripts.js"></script>
+    <script src="./scripts/check.js" type="text/javascript"></script>
   </head> 
   <body>
         <header class="header">
